<resources>
    <string name="app_name" translatable="false">Mediabook</string>
    <string name="app_name_normal" translatable="false">Mediabook</string>
    <string name="notify_del" translatable="false">DEL</string>
    <string name="notify_remind" translatable="false">Remind</string>
    <string name="app_loading_title">Please wait..</string>
    <string name="welcome_mediabook">Hello, welcome to Mediabook</string>
    <string name="warning_setting_title">Attention!</string>
    <string name="close_btn">Close</string>
    <string name="app_warning_title">Warning!</string>
    <string name="open_mediabook" translatable="false">Start navigating</string>
    <string name="share_url">Share..</string>
    <string name="other_browser">Open in external browser</string>
    <string name="okay_btn">Okay</string>
    <string name="quit_btn">Quit</string>
    <string name="cancel_btn">Cancel</string>
    <string name="yes_btn">Yes</string>
    <string name="no_btn">No</string>
    <string name="other_links_error_title">Unknown protocol</string>
    <string name="app_picture_chooser">Image Chooser</string>
    <string name="app_youtube_opened_title">Your full screen videos are adjusted according to your phone\'s sensor.</string>
    <string name="close_fullscreen">You can press back to exit the full screen.</string>
    <string name="happy_aospstudio_title" translatable="false">We\'re in our 3rd year!</string>
    <string name="happy_aospstudio_msg" translatable="false">Thank you for not leaving us alone in the 3rd year of our establishment and for choosing our products. In order to provide you with better experiences, we continue to work with our strengths. If you wish, you can contribute to us by making a donation at the age of 3.</string>
    <string name="happy_aospstudio_ok_btn" translatable="false">Close</string>
    <string name="happy_aospstudio_donate_btn" translatable="false">Donate</string>
    <string name="dev_aospstudio" translatable="false">AOSP STUDIO LLC</string>
    <string name="issue_tracker_btn" translatable="false">issue tracker</string>
    <string name="buy_title" translatable="false">Buy Pro version</string>
    <string name="buy_btn" translatable="false">Buy Pro version</string>
    <string name="buy_btn_disabled" translatable="false">Already purchased</string>
    <string name="buy_msg" translatable="false">By upgrading Mediabook to the Pro version, you remove the application opening ads and also unlock additional features. You can upgrade to the Pro version to support us.</string>
    <string name="hide_apps">Hide apps</string>
    <string name="onjs_title">site says:</string>
    <string name="edit_apps">Edit</string>
    <string name="browser_start_text">You can start browsing by touching a social media from the home button.</string>
    <string name="bottom_home">Homepage</string>
    <string name="bottom_browser">Browser</string>
    <string name="bottom_notify">Notifications</string>
    <string name="bottom_more">Menu</string>
    <string name="clipboard">Copy to clipboard</string>
    <string name="next">Forward</string>
    <string name="back">Back</string>
    <string name="refresh_page">Refresh</string>
    <string name="print">Print</string>
    <string name="safebrowsing_title">Malware detected</string>
    <string name="safebrowsing_msg">Mediabook has detected that this site has malware, and it has saved you from this situation.</string>
    <string name="safebrowsing_btn">Okay</string>
    <string name="app_version" translatable="false">6.5.6134</string>
    <string name="chromium_version" translatable="false">Chrome/76.0.3809.132 Mobile</string>
    <string name="opr_version" translatable="false">OPR/54.0.2672.49578</string>
    <string name="dsktp_chromium_version" translatable="false">Chrome/77.0.3865.90</string>
    <string name="dsktp_opr_version" translatable="false">OPR/64.0.3417.61</string>
    <string name="suggested">Suggested</string>
    <string name="all_apps">All Apps</string>
    <string name="app_name_facebook" translatable="false">facebook</string>
    <string name="app_name_instagram" translatable="false">Instagram</string>
    <string name="app_name_soundcloud" translatable="false">SoundCloud</string>
    <string name="app_name_twitter" translatable="false">twitter</string>
    <string name="app_name_periscope" translatable="false">Periscope</string>
    <string name="app_name_medium" translatable="false">Medium</string>
    <string name="app_name_pinterest" translatable="false">Pinterest</string>
    <string name="app_name_gplus" translatable="false">Google+</string>
    <string name="app_name_linkedin" translatable="false">LinkedIn</string>
    <string name="app_name_flickr" translatable="false">Flickr</string>
    <string name="app_name_myspace" translatable="false">myspace</string>
    <string name="app_name_tumblr" translatable="false">tumblr</string>
    <string name="app_name_reddit" translatable="false">Reddit</string>
    <string name="app_name_dailymotion" translatable="false">dailymotion</string>
    <string name="app_name_twitch" translatable="false">Twitch</string>
    <string name="app_name_vk" translatable="false">VKontakte</string>
    <string name="app_name_weibo" translatable="false">Sina Weibo</string>
    <string name="app_name_youtube" translatable="false">YouTube</string>
    <string name="app_name_wiki" translatable="false">Wikipedia</string>
    <string name="app_name_lastfm" translatable="false">last.fm</string>
    <string name="app_name_livejournal" translatable="false">LiveJournal</string>
    <string name="app_name_izlesene" translatable="false">izlesene</string>
    <string name="app_name_askfm" translatable="false">ask.fm</string>
    <string name="app_name_tinder" translatable="false">Tinder</string>
    <string name="app_name_messenger" translatable="false">Messenger</string>
    <string name="app_name_workplace" translatable="false">Workplace</string>
    <string name="app_name_badoo" translatable="false">Badoo</string>
    <string name="app_name_twoo" translatable="false">Twoo</string>
    <string name="app_name_meetup" translatable="false">Meetup</string>
    <string name="app_name_quora" translatable="false">Quora</string>
    <string name="app_name_wattpad" translatable="false">Wattpad</string>
    <string name="app_name_igdirect" translatable="false">Direct</string>
    <string name="app_name_spotify" translatable="false">Spotify</string>
    <string name="app_name_ytmusic" translatable="false">YT Music</string>
    <string name="app_name_dlive" translatable="false">DLive</string>
    <string name="settings_btn">Settings</string>
    <string name="quit_application_btn">Exit application</string>
    <string name="exitapp_btn">exit app</string>
    <string name="error_intent">There is a protocol that this application does not support.</string>
    <string name="error_download">There was a problem downloading the file.</string>
    <string name="snack_cleared">The selected data has been cleared.</string>
    <string name="title1">Hmm.. I think something is missing</string>
    <string name="title2">Cannot display page due to an error</string>
    <string name="app_error_dialog_title">Unexpected error!</string>
    <string name="app_network_connection_error">Your current Internet connection was not found, please connect to a network and restart the application</string>
    <string name="app_page_load_error">For some reason, the browser crashed, unfortunately, we have lost your existing operations, thanks to the smart rescuer, which is the last time you left the browser to re-start the page.</string>
    <string name="error_page_load">Sorry, Browser has stopped working unexpectedly.\n\nThe following reason has stopped the scanner and has lost its operations. However, the most recently left page is in the browser memory.\n\nPlease correct the problem in the error section below and touch Fix and re-start below.</string>
    <string name="retry_btn">Fix and restart</string>
    <string name="ssl_dialog_title">SSL Certificate Error</string>
    <string name="ssl_dialog_message">Do you want to continue anyway?</string>
    <string name="ssl_error">There\'s a problem with the certificate.</string>
    <string name="ssl_untrusted">The certificate authority is not trusted.</string>
    <string name="ssl_expired">The certificate has expired.</string>
    <string name="ssl_idmismatch">The certificate Hostname mismatch.</string>
    <string name="ssl_notypevalid">The certificate is not yet valid.</string>
    <string name="download_dialog_title">File download</string>
    <string name="download_dialog_msg">the file will be downloaded. Continue?</string>
    <string name="download_dialog_ok">Download</string>
    <string name="download_dialog_cancel">Cancel</string>
    <string name="download_error_title">Could not download file</string>
    <string name="app_download_file">Download file..</string>
    <string name="app_downloading_file">Downloading file</string>
    <string name="rate_dialog_title">Rate this app</string>
    <string name="rate_dialog_message">If you like this application, would you give a few seconds to score points? It won\'t take more than a few seconds. Thank you for your support!</string>
    <string name="rate_dialog_ok">Rate</string>
    <string name="rate_dialog_cancel">Maybe later</string>
    <string name="rate_dialog_no">No</string>
    <string name="categoryTheme">Theme</string>
    <string name="categoryBrowser">Browser</string>
    <string name="categorySecurity">Security</string>
    <string name="categoryAccessibility">Accessibility</string>
    <string name="categoryKeys">Keys and other</string>
    <string name="categoryPermits">Site Settings</string>
    <string name="info_settings">Please restart the application to apply the settings.</string>
    <string name="setting_sw1">Turn off JavaScript</string>
    <string name="setting_sw2">Block images</string>
    <string name="setting_sw3" translatable="false">MeraHyperBoost™</string>
    <string name="setting_sw4">Privacy mode</string>
    <string name="setting_sw5">Don\'t sleep screen</string>
    <string name="setting_sw6">Desktop mode</string>
    <string name="setting_sw7">Block 3rd party cookies</string>
    <string name="setting_sw8">Full screen mode</string>
    <string name="setting_sw9">Mera Sound Balancer</string>
    <string name="setting_sw10">Mera Color Enhancer</string>
    <string name="setting_sw11">Single hand mode</string>
    <string name="setting_sw12">Hide app top notifications</string>
    <string name="setting_sw13">Block pop-ups</string>
    <string name="setting_sw14">Recalling form data</string>
    <string name="setting_sw15">Activate the dark theme</string>
    <string name="setting_sw16">Enable Chromium</string>
    <string name="setting_sw17">Show zoom controls</string>
    <string name="setting_sw18">Battery saving mode</string>
    <string name="setting_sw19">Hide social media name</string>
    <string name="setting_sw20">Hide forward button</string>
    <string name="setting_sw21">Hide refresh button</string>
    <string name="setting_sw22">Hide top button</string>
    <string name="setting_sw23">Allow sites to access location</string>
    <string name="setting_sw24">Allow sites to access storage</string>
    <string name="setting_sw25">Show print button</string>
    <string name="setting_sw26">Hide navigation menu labels</string>
    <string name="setting_sw27">Hide top bar on browser screen</string>
    <string name="setting_sw28">Force vertical use</string>
    <string name="setting_sw29">Turn off touch sounds</string>
    <string name="tips_title">Help center</string>
    <string name="privacy_btn">Privacy Policy</string>
    <string name="terms_btn">Terms of service</string>
    <string name="about_btn">About app</string>
    <string name="developer_title">Developer</string>
    <string name="webkit_title" translatable="false">WebKit</string>
</resources>