<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/buytoolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_size"
        android:layout_alignParentTop="true"
        android:background="@color/colorBackground"
        android:elevation="@dimen/toolbar_elevation"
        android:minHeight="56dp"
        app:navigationIcon="@drawable/round_arrow_back_24"
        app:title="@string/buy_title" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/buytoolbar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp"
                android:text="@string/buy_msg"
                android:textSize="18sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buyapp_btn"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:backgroundTint="@color/colorPrimary"
                android:paddingStart="42dp"
                android:paddingEnd="42dp"
                android:text="@string/buy_btn"
                android:textColor="@color/settings_text_color" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>
